deploy/k3s/base/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: docker.io/library/server:latest # Full image name
          imagePullPolicy: IfNotPresent # Don't try to pull from registry
          ports:
            - containerPort: 4100
