deploy/k3s/base/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 80
      targetPort: 4100
  selector:
    app: server
